# silica-sort

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmark/: benchmark_external.py  benchmark_internal.py  external_results.md  internal_results.md
test_suite/: run_tests.py  test_external.py  test_internal.py  test_system.py
